--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -150,7 +150,7 @@ morekeywords={module, @@deriving, not, : , /\\}
 \begin{document}
 
 %% Title information
-\title[]{Mergeable Types for High Availablity}         %% [Short Title] is optional;
+\title[]{Mergeable Types for Highly-Available Replicated Data}         %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
 %\titlenote{with title note}             %% \titlenote is optional;
@@ -295,7 +295,7 @@ Text of abstract \ldots.
 
 
 %% Bibliography
-%\bibliography{bibfile}
+\bibliography{all}
 
 
 %% Appendix
